<resources>
    <string name="app_name">CoolPlaces</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogIn">Log in</string>
    <string name="btnSignUp">Sign up</string>
    <string name="btnFacebookLog">Log in with Facebook</string>
    <string name="btnGoogleLog">Log in with Google+</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="example_text_long">Lorem ipsum dolor sit amet, eu alii splendide duo, legere mediocrem vis ad. Labores admodum repudiare vis et, quo ut regione offendit. Dignissim laboramus pri et, dicant philosophia eos no. Dicant exerci an ius. Sint iusto pri ad, eum in case facilisis adolescens, scaevola tractatos facilisis duo ut.</string>
    <string name="add_friend">Add friend</string>
    <string name="clear">Clear all</string>
</resources>
